[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smacc"
description = "Sleep manipulation and communication clickything"
readme = "README.md"
# Build/runtime Python is pinned to 3.13 via .python-version. The minimum OS is
# Windows 10, set by Qt 6 (see the PyQt6 dependency note below).
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Remington Mallett", email = "mallett.remy@gmail.com" }]
dynamic = ["version"]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
]
dependencies = [
    # BlinkStick LED device (visual cues). Its backend, pywinusb, is Windows-only,
    # so scope to win32 to keep the cross-platform lock resolving everywhere.
    "blinkstick; sys_platform == 'win32'",
    "numpy",
    # Read-only view of the Windows volume mixer (Core Audio COM); Windows-only, so
    # scope to win32 like blinkstick. Pulls in comtypes.
    "pycaw; sys_platform == 'win32'",
    "pylsl",
    # Optional hardware TTL trigger output to a USB-serial trigger box (#28). Pure
    # Python and cross-platform, so it isn't platform-scoped; imported lazily and a
    # no-op unless a study enables serial triggers.
    "pyserial",
    "pyyaml",
    # Qt 6 GUI toolkit. Qt 6 requires Windows 10+, which is why SMACC's floor is
    # Windows 10 (Qt5/PyQt5 was the last line that still ran on Windows 8.1). PyQt6
    # pulls in PyQt6-Qt6 (the Qt libraries, incl. QtMultimedia) and PyQt6-sip.
    "PyQt6",
    "scipy",
    "sounddevice",
    "soundfile>=0.12",
    # The EEG Annotator (#136) ships inside the one SMACC binary — it is no longer
    # a separate optional exe — so its stack is a core dependency. MNE reads and
    # writes recordings (imported lazily, in smacc.eeg.io only); pyqtgraph renders
    # the traces; matplotlib backs figure export (#180). MNE is heavy, but the
    # onedir build imports it lazily off disk, so a session that never opens the
    # Annotator never loads it.
    "matplotlib>=3.7",
    "mne>=1.6",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
# The docs site and the single-file PDF manual are built with Quarto (#259) — a
# standalone binary (installed separately, not from PyPI) that renders both the HTML
# site and the Typst PDF from docs/, with no plugin stack or system libraries. The
# only Python the docs build needs is:
docs = [
    # pdf check: scripts/check_manual.py reads the built manual to guard against a
    # renderer silently truncating it (#250). Was transitive via mkdocs-exporter;
    # now a direct dependency.
    "pypdf",
    # Markdown formatter (the docs counterpart to ruff), run in CI and pre-commit.
    # gfm covers tables/autolinks; frontmatter leaves YAML front matter alone. Lists
    # nest with standard two-space CommonMark indentation — Quarto/Pandoc renders that
    # natively, so the MkDocs-era four-space style (and the mdformat-mkdocs plugin that
    # enforced it) retired with MkDocs (#265). Base mdformat leaves Quarto `:::`
    # callouts and `{...}` attributes intact.
    "mdformat",
    "mdformat-gfm",
    "mdformat-frontmatter",
]
dev = [
    "pytest",
    # GUI tests run headless via the Qt "offscreen" platform (set in
    # tests/conftest.py); pytest-qt supplies the qtbot/qapp fixtures and manages
    # the QApplication lifecycle. pytest-cov reports coverage of the now-tested
    # Qt layer (see the test job in .github/workflows/ci.yml).
    "pytest-qt",
    "pytest-cov",
    "ruff",
    "mypy",
    # Enforces the hardware-free boundary of the Study Editor and its model: a
    # static import-graph contract (see [tool.importlinter]) that fails CI if
    # smacc.studyconfig ever reaches the session/panels/audio stack (#301).
    "import-linter",
    "pre-commit",
    "pyinstaller",
    "types-PyYAML",
]

# A GUI launcher (no console window): exposes a `smacc` command after install.
# `python -m smacc` runs the same main(); see src/smacc/__main__.py.
[project.gui-scripts]
smacc = "smacc.__main__:main"

[project.urls]
Homepage = "https://github.com/remrama/smacc"
Source = "https://github.com/remrama/smacc"
"Bug Tracker" = "https://github.com/remrama/smacc/issues"
"Release Notes" = "https://github.com/remrama/smacc/releases"

[tool.setuptools.dynamic]
version = { attr = "smacc.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smacc = ["assets/*", "assets/biocals/*", "assets/cues/*", "assets/surveys/*"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# The formatter owns line length; it won't split string literals/comments,
# so leave E501 to the formatter rather than flagging unsplittable lines.
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
files = ["src"]

# Static import-graph contracts (run by `lint-imports` in CI's quality job).
# These lock in architectural boundaries that a stray import would otherwise
# erode silently — caught here, before code review, not at runtime.
[tool.importlinter]
root_package = "smacc"
# Required so the external audio/marker libraries in the contract below
# (sounddevice, pylsl) are tracked in the graph; without it the contracts would
# only see smacc's own modules.
include_external_packages = true

# The Study Editor authors a study by editing the pure StudyConfig model; it must
# never be able to open an audio stream, meter a mic, or fire an LSL marker. We
# make that true *by construction* rather than by discipline: forbid the model
# (and, once it exists, the editor window) from importing the run-time stack at
# all. With no import path to sounddevice/pylsl/the session, no code path can
# reach the hardware — the guarantee can't be forgotten in a future edit. The
# editor module joins source_modules when it lands (#301, step 5).
[[tool.importlinter.contracts]]
name = "The Study Editor model never reaches the hardware/run-time stack"
type = "forbidden"
source_modules = ["smacc.studyconfig"]
forbidden_modules = [
    "smacc.session",
    "smacc.gui",
    "smacc.panels",
    "sounddevice",
    "pylsl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["smacc"]
# Store repo-relative paths so Codecov maps the Windows CI run onto the source
# tree (src/smacc/…) instead of dropping the report for unmatched paths.
relative_files = true
# Coverage gating (project/patch targets) lives in codecov.yml, not here.
