[metadata]
name = smacc
version = 0.0.6
author = Remington Mallett
author_email = mallett.remy@gmail.com
description = Sleep manipulation and communication clickything
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remrama/smacc
project_urls =
    Homepage = https://github.com/remrama/smacc
    Source = https://github.com/remrama/smacc
    Bug Tracker = https://github.com/remrama/smacc/issues
    Release Notes = https://github.com/remrama/smacc/releases
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research

[options]
python_requires = ==3.8.*
install_requires =
    numpy
    pylsl
    PyQt5
    scipy
    sounddevice
